--- a/index.html
+++ b/index.html
@@ -5,125 +5,128 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ifaz Shop</title>
-  <link rel="shortcut icon" href="logo.png" type="image/png">
-  <link rel="stylesheet" href="css/style.css">
+  <title>UFlash</title>
+  <link rel="stylesheet" href="css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <!-- <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    /> -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+  <!-- google Montserrat  font  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-</style>
+
 <body>
   <header></header>
+
   <main class="main">
-    <section class="container">
-      <div class="">
-        <div class="search-box d-flex">
-          <input id="input-field" class="search-field me-2s" type="text" />
-          <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-            autocomplete="off" id="search-btn" onclick="loadProducts()">
-            Search
-          </button>
+    <div class="container my-2">
+      <div class="input-group mb-3">
+        <p class="text-danger" style="padding-right:40px;margin-top: 20px;font-size: large;font-weight:bold  ;">UFlash
+        </p>
+        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
+          aria-describedby="button-addon2">
+        <button class="btn btn-secondary" type="button" id="button-addon2">Search</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-9 col-lg-9 col-sm-7">
+        <div id="all-products" class="">
+          <!-- <h1></h1> -->
         </div>
       </div>
-      <div class="row">
-        <!-- modal div -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Details</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div id="modal-body">...</div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                  Close
-                </button>
-                <button type="button" class="btn btn-primary">
-                  Place order
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- end-of-modal-div -->
-        <div class="col-md-9 col-lg-9 col-sm-7">
-          <div id="all-products" class="">
-            <!-- <h1></h1> -->
-          </div>
-        </div>
-        <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-          <div class="cart" id="my-cart">
-            <table class="table">
-              <thead>
-                <h1>My-Cart</h1>
-                <tr>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                  <th scope="col"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th>Total Added-Products:</th>
-                  <td><span id="total-Products">0</span></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <th>Price:</th>
-                  <td>$ <span id="price">0</span></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <th>Delivery-Charge:</th>
-                  <td>$ <span id="delivery-charge">20</span></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <th>Total-Tax:</th>
-                  <td>$ <span id="total-tax">0</span></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <th scope="row">Total</th>
-                  <td colspan="2">$ <span id="total">0</span></td>
-                  <td></td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="parces text-center">
-              <button class="btn btn-primary text-center">Buy Now</button>
-            </div>
+      <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
+        <div class="cart" id="my-cart">
+          <table class="table">
+            <thead>
+              <h1>My-Cart</h1>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Total Added-Products:</th>
+                <td><span id="total-Products">0</span></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Price:</th>
+                <td>$ <span id="price">0</span></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Delivery-Charge:</th>
+                <td>$ <span id="delivery-charge">20</span></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>Total-Tax:</th>
+                <td>$ <span id="total-tax">0</span></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">Total</th>
+                <td colspan="2">$ <span id="total">0</span></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="parces text-center">
+            <button class="btn btn-primary text-center">Buy Now</button>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+    </div>
+    <!-- modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 id="product-title"></h6>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div>
+              <img id="modal-img" class=" modal-img" src="" alt="" />
+
+              <div class="text-center">
+                <p id="catagory"></p>
+                <p id="product-ratings"><i class="fas fa-star text-warning"></i> </p>
+
+                <p id="product-price"></p>
+                <p id="product-description"></p>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="modalClose-btn btn btn-danger" data-bs-dismiss="modal">Close</button>
+
+            </div>
+          </div>
+        </div>
+      </div>
   </main>
   <footer></footer>
 
   <!-- add javascript  file  -->
-  <script src="./js/app.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/d954b4bb57.js" crossorigin="anonymous"></script>
+  <script src="./js/app.js"></script>
+
+
 </body>
 
 </html>
