--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UFlash</title>
+  <title>FakeStore</title>
   <link rel="stylesheet" href="css/style.css" />
   <!-- Latest compiled and minified CSS -->
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Latest compiled and minified CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
+</head>
 </head>
 
 <body>
@@ -25,11 +32,11 @@
   <main class="main">
     <div class="container my-2">
       <div class="input-group mb-3">
-        <p class="text-danger" style="padding-right:40px;margin-top: 20px;font-size: large;font-weight:bold  ;">UFlash
+        <p class="text-danger" style="padding-right:40px;margin-top: 10px;font-size: large;font-weight:bold  ;">UFlash
         </p>
         <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username"
           aria-describedby="button-addon2">
-        <button class="btn btn-secondary" type="button" id="button-addon2">Search</button>
+        <button class="btn btn-secondary" type="button" id="button-addon2">Button</button>
       </div>
     </div>
     <div class="row">
@@ -103,7 +110,9 @@
 
               <div class="text-center">
                 <p id="catagory"></p>
-                <p id="product-ratings"><i class="fas fa-star text-warning"></i> </p>
+
+                <p> <span id="rating"></span> <span><i class="fas fa-star text-warning"></i></span> <span
+                    id="count"></span></p>
 
                 <p id="product-price"></p>
                 <p id="product-description"></p>
@@ -123,7 +132,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/d954b4bb57.js" crossorigin="anonymous"></script>
   <script src="./js/app.js"></script>
 
 
